Merged CP to catissue suite
SVN-Revision: 19289